@@ -1,0 +1,1 @@
+MD5 9cd678272b97dbdb53f42324be31eacd pingus-0.6.0.tar.bz2 9585580
