@@ -1,8 +1,14 @@
 # Copyright 2003 Stefan Knoblich <stefan.knoblich@t-online.de>
 # Distributed under the GPL v2
 
+*pingus-0.6.0-r1 (20 Apr 2003)
+
+  20 Apr 2003; Stefan Knoblich <stefan.knoblich@t-online.de> pingus-0.6.0-r1.ebuild :
+  Updated dependency stuff.
+
 *pingus-0.6.0 (19 Apr 2003)
 
   19 Apr 2003; Stefan Knoblich <stefan.knoblich@t-online.de> pingus-0.6.0.ebuild :
   Initial release.
+
 
